@@ -217,9 +217,9 @@
   <td></td>\n
 </tr>\n
 <tr>\n
-  <td>clickAndWait</td>\n
-  <td>link=Persons</td>\n
-  <td></td>\n
+  <td>selectAndWait</td>\n
+  <td>//select[@name="select_module"]</td>\n
+  <td>Persons</td>\n
 </tr>\n
 <tr>\n
   <td>selectAndWait</td>\n
